--- a/index.html
+++ b/index.html
@@ -199,18 +199,19 @@
       <b>8.02/10 (April 2025)</b>. I am strongly motivated to advance my expertise in
       electronic systems and embedded technologies. I’m seeking internship opportunities to apply my knowledge and grow.
     </p>
-  </section>
-
-  <!-- Projects -->
   <section id="projects" data-aos="fade-right">
-    <h2>Projects</h2>
-    <p>My academic projects demonstrate my ability to apply theory to practical innovation. 
-        My final-year project, Design and Implementation of an Unmanned Remote-Control Coconut Tree Climbing and Harvesting Robot, combined motor control systems, wireless communication, and sensor integration to solve an agricultural automation challenge
-        Presenting my final-year project at the International Conference on Innovation of Materials, Science and Engineering Technology (ICIMSET – 2025) gave me valuable experience in academic communication and interdisciplinary research exposure.</p>
-    <ul>
-      <li>🌴 <b>Coconut Tree Climbing & Harvesting Robot</b> – Motor control + Wireless communication + Sensors</li>
-    </ul>
-  </section>
+  <h2>Projects</h2>
+  <p>
+    My academic projects demonstrate my ability to apply theory to practical innovation. 
+    My final-year project, Design and Implementation of an Unmanned Remote-Control Coconut Tree Climbing and Harvesting Robot, combined motor control systems, wireless communication, and sensor integration to solve an agricultural automation challenge.
+    Presenting my final-year project at the International Conference on Innovation of Materials, Science and Engineering Technology (ICIMSET – 2025) gave me valuable experience in academic communication and interdisciplinary research exposure.
+  </p>
+
+  <div class="project">
+    <h3>🌴 Coconut Tree Climbing & Harvesting Robot</h3>
+    <a href="project.html" target="_blank" class="project-link">🔗 Visit Project Website</a>
+  </div>
+</section>
 
   <!-- Resume -->
   <section id="resume" data-aos="zoom-in">
