--- a/project.html
+++ b/project.html
@@ -6,70 +6,92 @@
   <title>Coconut Tree Climbing & Harvesting Robot</title>
   <style>
     body {
-  font-family: 'Times New Roman', serif;
-  font-style: italic;
-  background: url("coconut-tree-5288844_1920.jpg") no-repeat center center fixed;
-  background-size: cover;  /* makes image cover the entire page */
-  color: #e0e0e0;
-  margin: 0;
-  padding: 0;
-}
+      font-family: 'Times New Roman', serif;
+      font-style: italic;
+      background: url("coconut-tree-5288844_1920.jpg") no-repeat center center fixed;
+      background-size: cover;
+      color: #f5deb3; /* soft beige for readability */
+      margin: 0;
+      padding: 0;
+    }
 
     header {
-      background: linear-gradient(to right, #0f0f0f, #1c1c1c);
+      background: rgba(0, 0, 0, 0.6); /* translucent black for readability */
       padding: 50px;
       text-align: center;
     }
+
     header h1 {
       font-size: 2.5rem;
-      color: #00bcd4;
+      color: #ffd700; /* golden yellow for header */
     }
+
     section {
       padding: 40px;
       max-width: 900px;
       margin: auto;
+      background: rgba(0, 0, 0, 0.5); /* semi-transparent background for clarity */
+      border-radius: 10px;
+      margin-bottom: 30px;
     }
+
     section h2 {
-      color: #00bcd4;
+      color: #ffa500; /* orange-gold for subheadings */
       margin-bottom: 15px;
+      text-align: center;
     }
-    ..gallery {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-}
 
-.gallery .item {
-  max-width: 400px;
-  text-align: center;
-}
+    .methodology img {
+      display: block;
+      margin: 0 auto;
+      width: 60%; /* smaller, like gallery */
+      max-width: 300px;
+      border-radius: 8px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.6);
+    }
 
-.gallery img {
-  width: 100%;
-  border-radius: 8px;
-  margin-bottom: 10px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.6);
-}
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+    }
 
-.gallery p {
-  font-size: 0.95rem;
-  color: #ccc;
-}
+    .gallery .item {
+      max-width: 250px;
+      text-align: center;
+    }
+
+    .gallery img {
+      width: 100%;
+      border-radius: 8px;
+      margin-bottom: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.6);
+    }
+
+    .gallery p {
+      font-size: 0.95rem;
+      color: #f5deb3;
+    }
 
     video {
       width: 100%;
       border-radius: 10px;
       margin-top: 20px;
     }
+
     footer {
       text-align: center;
       padding: 20px;
-      background: #0f0f0f;
+      background: rgba(0, 0, 0, 0.8);
       margin-top: 40px;
-      color: #777;
+      color: #d2b48c; /* tan color */
     }
-    a { color: #00bcd4; text-decoration: none; }
+
+    a {
+      color: #ffd700;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
@@ -82,30 +104,32 @@
     <h2>Abstract</h2>
     <p>
       Coconut harvesting is a labour-intensive and hazardous task, often requiring skilled
-climbers to scale tall trees. To address this challenge, this project focuses on the design
-and implementation of an unmanned remote-controlled coconut tree climbing and
-harvesting robot. The proposed system consists of a mechanized climbing mechanism,
-a cutting tool, and a wireless control interface, enabling safe and eﬃcient harvesting.
-The robot employs a motorized gripping and climbing system that adapts to varying
-trunk diameters and surface irregularities. A remote-controlled cutting arm is
-integrated to ensure precise harvesting without damaging the tree. The system is
-designed with lightweight yet durable materials to enhance mobility and eﬃciency.
-Field tests were conducted to evaluate the robot’s climbing stability, cutting eﬃciency,
-battery performance, and operational feasibility. Results indicate that the robot
-successfully ascends coconut trees, performs controlled cutting, and descends safely,
-reducing human eﬀort and risk. Performance comparisons with traditional methods
-highlight improvements in safety, speed, and reliability. This innovation presents a
-promising solution for automated coconut harvesting, reducing dependence on manual
-labour while ensuring sustainability and productivity in the agricultural sector.
+      climbers to scale tall trees. To address this challenge, this project focuses on the design
+      and implementation of an unmanned remote-controlled coconut tree climbing and
+      harvesting robot. The proposed system consists of a mechanized climbing mechanism,
+      a cutting tool, and a wireless control interface, enabling safe and eﬃcient harvesting.
+      The robot employs a motorized gripping and climbing system that adapts to varying
+      trunk diameters and surface irregularities. A remote-controlled cutting arm is
+      integrated to ensure precise harvesting without damaging the tree. The system is
+      designed with lightweight yet durable materials to enhance mobility and eﬃciency.
+      Field tests were conducted to evaluate the robot’s climbing stability, cutting eﬃciency,
+      battery performance, and operational feasibility. Results indicate that the robot
+      successfully ascends coconut trees, performs controlled cutting, and descends safely,
+      reducing human eﬀort and risk. Performance comparisons with traditional methods
+      highlight improvements in safety, speed, and reliability. This innovation presents a
+      promising solution for automated coconut harvesting, reducing dependence on manual
+      labour while ensuring sustainability and productivity in the agricultural sector.
     </p>
   </section>
+
   <section>
-  <h2>Methodology</h2>
-  <div class="methodology">
-    <img src="IMG_1134.JPG" alt="Methodology Diagram">
-  </div>
-</section>
-<section>
+    <h2>Methodology</h2>
+    <div class="methodology">
+      <img src="IMG_1134.JPG" alt="Methodology Diagram">
+    </div>
+  </section>
+
+  <section>
     <h2>Features</h2>
     <ul>
       <li>🕹 Remote-controlled navigation</li>
@@ -116,22 +140,21 @@ labour while ensuring sustainability and productivity in the agricultural sector
   </section>
 
   <section>
-  <h2>Gallery</h2>
-  <div class="gallery">
-    <div class="item">
-      <img src="IMG_9998.JPG" alt="Robot climbing">
-      <p>Robot climbing a coconut tree using motorized system.</p>
+    <h2>Gallery</h2>
+    <div class="gallery">
+      <div class="item">
+        <img src="IMG_9998.JPG" alt="Robot climbing">
+        <p>Robot climbing a coconut tree using motorized system.</p>
+      </div>
+      <div class="item">
+        <img src="IMG_9999.JPG" alt="Robot design">
+        <p>Robot structural design with motor and sensor integration.</p>
+      </div>
     </div>
-    <div class="item">
-      <img src="IMG_9999.JPG" alt="Robot design">
-      <p>Robot structural design with motor and sensor integration.</p>
-    </div>
-  </div>
-</section>
-
+  </section>
 
   <footer>
-    <p>© 2025 Keerthana Manikandan | <a href="../index.html">Back to Portfolio</a></p>
+    <p>© 2025 Keerthana Manikandan | <a href="index.html">Back to Portfolio</a></p>
   </footer>
 </body>
 </html>
