Added portfolio website

--- a/project.html
+++ b/project.html
@@ -178,16 +178,16 @@
   <section>
     <h2>🌴Features</h2>
     <ul>
-1. Tree Climbing Mechanism – Designed with grippers/rollers to climb tall and slender coconut trees safely.
-2. Automated Harvesting Arm – Equipped with a cutting tool (saw/blade) to detach coconuts.
-3. Remote/IoT Control – Operated wirelessly via remote control or mobile application.
-4. Stability & Balance – Self-adjusting mechanism to grip different tree diameters firmly.
-5. Energy Source – Powered by rechargeable battery/solar-assisted system for field usability.
-6. Camera/ Sensor Assistance – Camera or sensors help identify coconuts and ensure safe cutting.
-7. Safety Mechanism – Prevents accidental falls with locking system or backup support.
-8. Harvest Collection – Provision to hold or drop coconuts safely without damage.
-9. Compact & Portable Design – Lightweight structure for easy transport between farms.
-10. Cost-Effective Alternative – Reduces reliance on manual climbers, increasing efficiency and safety.
+<li>1. Tree Climbing Mechanism – Designed with grippers/rollers to climb tall and slender coconut trees safely.</li>
+<li>2. Automated Harvesting Arm – Equipped with a cutting tool (saw/blade) to detach coconuts.</li>
+<li>3. Remote/IoT Control – Operated wirelessly via remote control or mobile application.</li>
+<li>4. Stability & Balance – Self-adjusting mechanism to grip different tree diameters firmly.</li>
+<li>5. Energy Source – Powered by rechargeable battery/solar-assisted system for field usability.</li>
+<li>6. Camera/ Sensor Assistance – Camera or sensors help identify coconuts and ensure safe cutting.</li>
+<li>7. Safety Mechanism – Prevents accidental falls with locking system or backup support.</li>
+<li>8. Harvest Collection – Provision to hold or drop coconuts safely without damage.</li>
+<li>9. Compact & Portable Design – Lightweight structure for easy transport between farms.</li>
+<li>10. Cost-Effective Alternative – Reduces reliance on manual climbers, increasing efficiency and safety.</li>
     </ul>
   </section>
 
